<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/tituloPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_consultar_perfil"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="26dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Etiqueta para el Nombre -->
    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/tituloPerfil"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Campo para el Nombre -->
    <EditText
        android:id="@+id/editNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingresa_nombre"
        android:inputType="textPersonName"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/labelNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9" />



    <!-- Etiqueta para la Contraseña -->
    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasena"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@id/editNombre"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Campo para la Contraseña -->
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingresa_contrasena"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp"
        app:boxStrokeColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/labelPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Botón para Guardar Cambios -->
    <Button
        android:id="@+id/btnGuardarPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar_cambios"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>
