<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:id="@+id/main"
    tools:context=".activity.cliente.ContactarTallerActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/titulo_contactar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactar_taller"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:textColor="@color/black" />

    <!-- Botón para llamar por teléfono -->
    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_llamar"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white" />

    <!-- Botón para enviar correo -->
    <Button
        android:id="@+id/btnCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_correo"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white" />

    <!-- Botón para abrir WhatsApp -->
    <Button
        android:id="@+id/btnWhatsApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_chatear"
        android:drawableStart="@drawable/ic_whatsapp"
        android:drawablePadding="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white" />

</LinearLayout>
