<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bajaEmpleadoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/tituloBajaEmpleado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_baja_empleado"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Indicador del campo correo -->
    <TextView
        android:id="@+id/textViewCorreoBaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_electronico"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tituloBajaEmpleado"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Campo de entrada para el correo -->
    <EditText
        android:id="@+id/correoEmpleado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_correo_empleado"
        android:inputType="textEmailAddress"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCorreoBaja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para confirmar la baja -->
    <Button
        android:id="@+id/botonDarDeBaja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_baja"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/correoEmpleado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
