<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- Nombre de la pieza -->
    <TextView
        android:id="@+id/textNombrePieza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_pieza"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Cantidad disponible -->
    <TextView
        android:id="@+id/textCantidadPieza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textNombrePieza"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Precio de la pieza -->
    <TextView
        android:id="@+id/textPrecioPieza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textCantidadPieza"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
